# Harmony

./: README.md  docker-compose.yml  harmony.code-workspace
backend/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  socket-test.html
backend/migrations/: 20251214005706_initial_schema.sql  20251214173350_add_channel_types_and_organization.sql  20251215175521_add_main_channel.sql  20251216230813_friends.sql  20251217015804_profiles.sql
backend/src/: main.rs
backend/src/handlers/: auth.rs  channel.rs  dm.rs  friendship.rs  message.rs  mod.rs  organization.rs  profile.rs  server.rs
backend/src/middleware/: auth.rs  mod.rs
backend/src/models/: channel.rs  friendship.rs  message.rs  mod.rs  organization.rs  pagination.rs  server.rs  user.rs
backend/src/routers/: api.rs
backend/src/services/: auth.rs  channel.rs  friendship.rs  message.rs  mod.rs  organization.rs  profile.rs  server.rs
backend/src/utils/: error.rs
backend/src/ws/: connection.rs  handler.rs  mod.rs
frontend/: .dockerignore  .env.example  .prettierrc  Dockerfile  frontend.nginx.conf  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
frontend/src/lib/: api.svelte.ts  ensureError.ts  types.ts
frontend/src/lib/components/: ChannelIcon.svelte  ChannelLink.svelte  ChannelView.svelte  CreateServerButton.svelte  LoadingSpinner.svelte  MemberList.svelte  Message.svelte  NavButton.svelte  ServerList.svelte  UserCard.svelte  (+1 more)
frontend/src/routes/: +layout.svelte  +layout.ts  layout.css  page.svelte.spec.ts
nginx/: nginx.conf
nginx/conf.d/: api.conf  frontend.conf
(+17 files in other folders)
