[package]
name = "harmony-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
argon2 = "0.5.3"
axum = { version = "0.8.7", features = ["ws", "macros"] }
chrono = { version = "0.4.42", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = "10.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }

[dev-dependencies]
http-body-util = "0.1.3"
